--- a/_posts/2016-12-21-1.md
+++ b/_posts/2016-12-21-1.md
@@ -12,7 +12,8 @@ title: 1. 夫婦の役割分担
 ---
 
 ## 書き起こし
-- konifar「こんにちは」
-- yome「こんにちは」
+konifar「こんにちは」
+
+<font color="blue">yome「こんにちは」</font>
 
 ## 関連リンク
