--- a/_posts/2016-12-21-1.md
+++ b/_posts/2016-12-21-1.md
@@ -11,9 +11,295 @@ layout: article
 title: 1. 夫婦の役割分担
 ---
 
+## 関連リンク
+- [嫁の誕生日の日に登壇した時のTweet](https://twitter.com/konifar/status/699593088067448833)
+- [オープンソースでDroidKaigiのカンファレンスアプリ作ってる](http://konifar.hatenablog.com/entry/2016/02/11/031257)
+- [ブログで炎上しないために工夫していること](http://konifar.hatenablog.com/entry/2015/07/12/193906)
+
+
 ## 書き起こし
-konifar「こんにちは」
+<font color="red">konifar「こんにちは」</font>
 
 <font color="blue">yome「こんにちは」</font>
 
-## 関連リンク
+<font color="red">konifar「yome.fmって形でやってみようって思って、最初の収録をまずしてみている感じなんですが、元々ね、なんでこれを始めたかっていうと、（他の）podcastの収録が2回くらいあって、帰り遅かったから知ってると思うんだけど」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「2回やってみて、結構みんな真面目な話してるなぁと思っていて、でも真面目じゃないpodcastをもっとライトに聞きたいなぁと思ったのね」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「で、エンジニアとかは、結構真面目な話をみんなしてるんだけど、何かエンジニアリングの話してもいいけど今さらpodcastでエンジニアの話するのもなぁと思って、そしたらウチにちょっとみんなが『あのお嫁さんはどんな人なの？』って気になってるようなのがいるから、まぁ嫁さんと2人でやるのもいいんじゃないかなぁと思って、始めてみたと。まぁまず1回ね、やってみようと。」</font>
+
+<font color="red">konifar「あとね、たまに『本当に嫁さんいるの？』みたいなことも言われるんだよね」</font>
+
+<font color="blue">yome「ｗｗｗ」</font>
+
+<font color="red">konifar「Twitterで今日嫁にこんなこと言われたみたいなことを呟くじゃない？知ってる？」</font>
+
+<font color="blue">yome「知らない」</font>
+
+<font color="red">konifar「あれ？Twitter…」</font>
+
+<font color="blue">yome「フォローしてるけど…」</font>
+
+<font color="red">konifar「見てない？」</font>
+
+<font color="blue">yome「あんまり見てないかも」</font>
+
+<font color="red">konifar「あ、そうなんだ。まぁあんまり監視されてもね、変なことしか言わないから」</font>
+
+<font color="blue">yome「そうなの？ｗ」</font>
+
+<font color="red">konifar「うん、変…。実はね。困るんだけど」</font>
+
+<font color="blue">yome「ヘンテコだからな」</font>
+
+<font color="red">konifar「いやいや。Twitterでこう、嫁さんがなんか変なこと…変なことっていうか、例えば去年のDroidKaigiの時とかだと、俺がDroidKaigi登壇する日がちょうど（yome氏の）誕生日だったじゃない？」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「誕生日に登壇するから、後で誕生日に登壇する…」</font>
+
+<font color="blue">yome「価値があったかどうか？」</font>
+
+<font color="red">konifar「そう、価値があったか確認するぞ、みたいな話をしたでしょう？」</font>
+
+<font color="blue">yome「ｗ」</font>
+
+<font color="red">konifar「で、その話をTwitterにあげた時に、わりとこう反響というか、『なんて恐妻なんだ』みたいなね」</font>
+
+<font color="blue">yome「ひどいｗ」</font>
+
+<font color="red">konifar「いやいや、みたいな話があって、逆に『どんな嫁さんなんだ？本当にいるのか？』みたいなことを言われるから」</font>
+
+<font color="blue">yome「恐妻すぎて？」</font>
+
+<font color="red">konifar「そう、恐妻すぎて。別に悪口とかじゃないんだけど。だからいっぺんね、顔を出すのは嫌だから、声だけでやるってのもありかなみたいな軽い気持ちで考えていて、まずやってみようという感じで今録ってるわけ」</font>
+
+<font color="blue">yome「なるほど」</font>
+
+<font color="red">konifar「わかった？」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「でね、よく聞かれるのが、エンジニアと嫁さんでどうやったら仲良く暮らせるんだと。仲良くないとか言わないでね今ｗ」</font>
+
+<font color="blue">yome「ｗｗ」</font>
+
+<font color="red">konifar「そういう話すると全部（流れが）壊れちゃうから」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「まぁ仲いい体で。Twitterとかで見た人からすると、すごい仲がいいって言われるわけ、俺が」</font>
+
+<font color="blue">yome「へえええ」</font>
+
+<font color="red">konifar「うんｗ 言われるんだよ」</font>
+
+<font color="blue">yome「ｗｗ」</font>
+
+<font color="red">konifar「で、よく聞かれるのが、夫婦の役割分担とかね」</font>
+
+<font color="blue">yome「ほお」</font>
+
+<font color="red">konifar「どうやってんだって言われるんだけど、そんなに決めてないよね？」</font>
+
+<font color="blue">yome「決めてないね。やれる方がやる」</font>
+
+<font color="red">konifar「やれる方がやるんだけど、一個決めてるのは、俺が料理するの好きだから料理して、今日もステーキ焼いて食ったりとかして」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「で、他は…他ぜんぶ」</font>
+
+<font color="blue">yome「洗濯とかは私ですね」</font>
+
+<font color="red">konifar「そう、洗濯とかやってくれてるでしょ。洗い物も基本やってくれてるよね？」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「どっちがやるか決めてないのっていうと？」</font>
+
+<font color="blue">yome「掃除？」</font>
+
+<font color="red">konifar「掃除と…風呂掃除？」</font>
+
+<font color="blue">yome「は、ジャンケンだね」</font>
+
+<font color="red">konifar「熾烈な争いが繰り広げられるｗ」</font>
+
+<font color="blue">yome「ｗｗｗ」</font>
+
+<font color="red">konifar「でもなんでこれこうなったんだっけ？もともと決めてないよね？そんな話とかでは」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「自然と最適化されて、ね？（konifarの）帰りが遅いから、その間に暇だから洗濯とかやってくれて、俺は料理作りたいって言って、なんか自然とそうなった感じ？なのかな？」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「今のところ困ってることある？」</font>
+
+<font color="blue">yome「えー、困ってること…？」</font>
+
+<font color="red">konifar「ない？ないよね？」</font>
+
+<font color="blue">yome「そんなにないね。最近（konifarが）病気になることが多い！最近病気になるので困ってます！」</font>
+
+<font color="red">konifar「ヤバイぞ。脱線しそうな感じになってきた。まぁ、うん、病気にはなるねｗ 今ちょうどね、帯状疱疹になったっていう旬のネタがあるからｗ まぁそうだね」</font>
+
+<font color="blue">yome「ｗｗ」</font>
+
+<font color="red">konifar「まぁでも役割分担ってところだとそんなにないか」</font>
+
+<font color="blue">yome「うん、生活する上ではそんなに困らない」</font>
+
+<font color="red">konifar「帰り遅い時あるから、その時俺がご飯作るの遅れて、腹が減る？」</font>
+
+<font color="blue">yome「そうだね」</font>
+
+<font color="red">konifar「くらいかな？」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「まぁエンジニアだからっていうのもそうだけど、他の職種でもそうか。たまに帰りが遅くなる時があるじゃない？」</font>
+
+<font color="blue">yome「うん、あるね」</font>
+
+<font color="red">konifar「俺の場合だと、この前は何かあったかな。リリースで、hotfixって言って、緊急リリースが必要になったと。そういうの見てるとどう思う？変な職業だなぁとか思ったりするの？」</font>
+
+<font color="blue">yome「いや、そういうもんなんだなぁって思う」</font>
+
+<font color="red">konifar「あ、教育されてる感じだ」</font>
+
+<font color="blue">yome「ｗ」</font>
+
+<font color="red">konifar「でも、もともと知らなかったでしょう？」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「昔、よく覚えてるのが、『リリースだから』って言った時に『リリースとは？』みたいな顔されたんだよね。知らなかったでしょう？」</font>
+
+<font color="blue">yome「知らなかった」</font>
+
+<font color="red">konifar「魚を放流するリリースとかっていう言葉でしか知らないはずで。これはもうちょっとリリースっていうのはとりあえず大変なものなんだっていう話をして、今はそれがもう当たり前になっちゃったってことだよね？」</font>
+
+<font color="blue">yome「そうだね」</font>
+
+<font color="red">konifar「アプリリリースする時はたしかに忙しいんだけど、他にも、家で結構仕事したりとかもするし」</font>
+
+<font color="blue">yome「あぁ〜」</font>
+
+<font color="red">konifar「ドラマ見ながら横でパソコンをカタカタやってて、『何やってるのかな？』とか思わない？」</font>
+
+<font color="blue">yome「あんまり思わないｗ」</font>
+
+<font color="red">konifar「あ、どうでもいいｗ 逆に」</font>
+
+<font color="blue">yome「何やってるのかなとちょっとは思うけどｗ」</font>
+
+<font color="red">konifar「うん」</font>
+
+<font color="blue">yome「また仕事やってるのかなぁ？って思う」</font>
+
+<font color="red">konifar「あーたしかにね、仕事やってるの？って聞くよね」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「でもね、仕事じゃない時もあるからね」</font>
+
+<font color="blue">yome「そう、Twitterの時とかｗ」</font>
+
+<font color="red">konifar「ｗｗ Twitterやってたり、ブログ書いてたり、あとは去年だとDroidKaigiのアプリとかずっと作ってたでしょう？4時とかまで作ってたじゃん。朝の」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「それ見て、仕事もやりつつ、そういう仕事じゃないこともやってるって、あんまり他の友だちの職業とかだとないでしょう？」</font>
+
+<font color="blue">yome「そうだねぇ。みんな家で仕事しないもん」</font>
+
+<font color="red">konifar「あ、そうかそうか。パソコンじゃなくて現場とかだもんね」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「そういうの見ててさぁ、ぶっちゃけどう思ってるの？」</font>
+
+<font color="blue">yome「大変だ」</font>
+
+<font color="red">konifar「あ、大変か。偉いなとか？」</font>
+
+<font color="blue">yome「うん、偉いなとも思ってるよ」</font>
+
+<font color="red">konifar「あ、偉いなもあるの？」</font>
+
+<font color="blue">yome「あるよ、あるよ！」</font>
+
+<font color="red">konifar「あぁ、そうかｗ それはまぁ、そうなんだ」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「なるほどｗ まぁ毎日勉強しなきゃいけないような職業ではあるからねぇ。日進月歩というか。常に新しい技術が出てきたり」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「あと承認欲求もあるしね」</font>
+
+<font color="blue">yome「そうだね」</font>
+
+<font color="red">konifar「やっぱりブログだけではなく、何か新しいものを作って、自分の代表作を作りたいみたいな気持ちもあるわけ。それを家でチョコチョコやってて、たまに怒られる時もあるけどね」</font>
+
+<font color="blue">yome「そうだっけ？」</font>
+
+<font color="red">konifar「あるある。いや、結構頻度あると思うｗ」</font>
+
+<font color="blue">yome「え？そうかｗ」</font>
+
+<font color="red">konifar「うんｗ いつまで仕事してるんだ、みたいな。いやでも今は仕事じゃないみたいな話をして、仕事じゃねえのかよみたいなことを言うじゃん、言うじゃん？」</font>
+
+<font color="blue">yome「言うかｗ」</font>
+
+<font color="red">konifar「うん、言う…時もある」</font>
+
+<font color="blue">yome「ｗ」</font>
+
+<font color="red">konifar「まぁでも偉いとも思ってるんだったら、問題はないか」</font>
+
+<font color="blue">yome「うん」</font>
+
+<font color="red">konifar「ていう感じで、なんというか嫁さんから見たエンジニアとかね。あと若い人って、俺の周りにはあんまりいないけど、技術職で結婚したら自分の時間をどうやって取るのか、勉強したいけど結婚したらできなくなるんじゃないかとかっていうのを考えてる人がいるわけ」</font>
+
+<font color="blue">yome「へえ〜」</font>
+
+<font color="red">konifar「でも、実際にどう時間取ってるかとか、仲良くやるかみたいな話って、あんまり公開されないし、公開されたとしてもブログだとちょっと恥ずかしいというか、なんかわざわざ改まって文字にするとちょっとその…気持ち悪かったりするんだよね」</font>
+
+<font color="blue">yome「ｗ」</font>
+
+<font color="red">konifar「まぁ、このpodcastも気持ち悪いかと言われたらちょっと気持ち悪いかもしれないけど、アウトプットとしては楽だし、まぁアリかなぁと思うんだよね」</font>
+
+<font color="blue">yome「そっか」</font>
+
+<font color="red">konifar「まぁ一回放流してみて、反応を見て、こういうこと聞きたいみたいな話があったらそれをまた拾って、2〜3回やってみてね」</font>
+
+<font color="blue">yome「え？！そんなに？」</font>
+
+<font color="red">konifar「そ、そうだよ。1回で終わったらね、それがいいかどうかも判断できないでしょう？まぁそういうもんだから。2〜3回やってみて、飽きたらやめると。飽きるか、大炎上するかもしれないし」</font>
+
+<font color="blue">yome「ｗ こわーい」</font>
+
+<font color="red">konifar「いや、炎上はしないと思う。まぁ今まで俺はめっちゃ炎上してきたから、ブログで。」</font>
+
+<font color="blue">yome「ｗｗ」</font>
+
+<font color="red">konifar「知ってるでしょ？炎上するたびに俺が、また炎上しちゃった…って家でシュンとしてるの知ってるでしょ？」</font>
+
+<font color="blue">yome「うんｗ」</font>
+
+<font color="red">konifar「（そういう経験からすると）たぶんねぇ、炎上はしないと思う。でもまぁ、軽く10分とかね、15分とか、短い時間で流してみて、反応見て、っていうのをやってみようかと思うんで、よろしくお願いします」</font>
+
+<font color="blue">yome「承知しました」</font>
+
+<font color="red">konifar「はい、じゃあ今日はこんなところでね、バイバイ」</font>
+
+<font color="blue">yome「バイバーイ」</font>
