--- a/_posts/2016-12-21-1.md
+++ b/_posts/2016-12-21-1.md
@@ -20,11 +20,11 @@ title: 1. 夫婦の役割分担
 ## 書き起こし
 - <font color="blue">konifar「こんにちは」</font>
 - <font color="red">yome「こんにちは」</font>
-- <font color="blue">konifar「yome.fmって形でやってみようって思って、最初の収録をまずしてみている感じなんですが、元々ね、なんでこれを始めたかっていうと、（他の）podcastの収録が2回くらいあって、帰り遅かったから知ってると思うんだけど」</font>
+- <font color="blue">konifar「yome.fmって形でやってみようって思って、最初の収録をまずしてみている感じなんですが。もともとね、なんでこれを始めたかっていうと、（他の）podcastの収録が2回くらいあって。帰り遅かったから知ってると思うんだけど」</font>
 - <font color="red">yome「うん」</font>
 - <font color="blue">konifar「2回やってみて、結構みんな真面目な話してるなぁと思っていて、でも真面目じゃないpodcastをもっとライトに聞きたいなぁと思ったのね」</font>
 - <font color="red">yome「うん」</font>
-- <font color="blue">konifar「で、エンジニアとかは、結構真面目な話をみんなしてるんだけど、何かエンジニアリングの話してもいいけど今さらpodcastでエンジニアの話するのもなぁと思って、そしたらウチにちょっとみんなが『あのお嫁さんはどんな人なの？』って気になってるようなのがいるから、まぁ嫁さんと2人でやるのもいいんじゃないかなぁと思って、始めてみたと。まぁまず1回ね、やってみようと。」</font>
+- <font color="blue">konifar「で、エンジニアとかは、結構真面目な話をみんなしてるんだけど、何かエンジニアリングの話してもいいけど今さらpodcastでエンジニアの話するのもなぁと思って。そしたらウチにちょっとみんなが『あのお嫁さんはどんな人なの？』って気になってるようなのがいるから、まぁ嫁さんと2人でやるのもいいんじゃないかなぁと思って、始めてみたと。まぁまず1回ね、やってみようと」</font>
 - <font color="blue">konifar「あとね、たまに『本当に嫁さんいるの？』みたいなことも言われるんだよね」</font>
 - <font color="red">yome「ｗｗｗ」</font>
 - <font color="blue">konifar「Twitterで今日嫁にこんなこと言われたみたいなことを呟くじゃない？知ってる？」</font>
