--- a/_posts/2016-12-28-1.md
+++ b/_posts/2016-12-28-1.md
@@ -8,7 +8,7 @@ date: 2016-12-28 00:00:00 +0900
 description: konifarと嫁氏で、yome.fmの反響、普段の会話、響け！ユーフォニアム、まどマギ、Material Designなどについて話しました。
 duration: "10:49"
 layout: article
-title: 2. 日々の仕事とアニメの会話
+title: 2.日々の仕事とアニメの会話
 ---
 
 ## 関連リンク
@@ -19,7 +19,8 @@ title: 2. 日々の仕事とアニメの会話
 
 
 ## 書き起こし
-### yome.fm #1の反響
+
+### yome.fm 第1回の反響
 - <font color="blue">konifar「こんばんは」</font>
 - <font color="red">yome「こんばんは」</font>
 - <font color="blue">konifar「yome.fm第2回ということでね」</font>
