--- a/_posts/2016-12-28-1.md
+++ b/_posts/2016-12-28-1.md
@@ -8,7 +8,7 @@ date: 2016-12-28 00:00:00 +0900
 description: konifarと嫁氏で、yome.fmの反響、普段の会話、響け！ユーフォニアム、まどマギ、Material Designなどについて話しました。
 duration: "10:49"
 layout: article
-title: 2.日々の仕事とアニメの会話
+title: 2. 日々の仕事とアニメの会話
 ---
 
 ## 関連リンク
@@ -128,7 +128,7 @@ title: 2.日々の仕事とアニメの会話
 - <font color="blue">konifar「これからというか次か。次、第3回はちょっと開発っぽい話をしたいなって思ってるんだよね」</font>
 - <font color="red">yome「ふーん」</font>
 - <font color="blue">konifar「ていうのも、昔俺が作ったアプリを見せて、結構頑張って作ったアニメーションとかあったわけ。画面をタップしたら、次の画面を開く時にこうニュッとかっこよく開くやつ。かっこよくって言っても見た目がかっこいいだけじゃなくて、最近のMaterial DesignっていうGoogleが定めたトレンドみたいなやつに沿った形で、頑張って作ったやつを見せたの。覚えてるかわからないけど」</font>
-- <font color="red">yome「[猫のやつ](https://github.com/konifar/material-cat)？」</font>
+- <font color="red">yome「猫のやつ？」</font>
 - <font color="blue">konifar「あ、猫のやつ。そう。猫のやつ見せたじゃん。その時に『ちょっともっさりしてる』って言われてｗ」</font>
 - <font color="red">yome「うんｗ」</font>
 - <font color="blue">konifar「Instagramとかって全然アニメーションないじゃん」</font>
