--- a/_posts/2016-12-31-3.md
+++ b/_posts/2016-12-31-3.md
@@ -22,75 +22,75 @@ title: 3. Material Design Animationと嫁氏
 ### イントロダクション
 - <font color="blue">konifar「こんにちは」</font>
 - <font color="red">yome「こんにちは」</font>
-- <font color="blue">konifar「「今日はもうだいぶ慣れたね」</font>
+- <font color="blue">konifar「今日はもうだいぶ慣れたね」</font>
 - <font color="red">yome「そう？」</font>
-- <font color="blue">konifar「「うん、音声テストを自分からしだしたから」</font>
+- <font color="blue">konifar「うん、音声テストを自分からしだしたから」</font>
 - <font color="red">yome「あぁ〜」</font>
-- <font color="blue">konifar「「慣れてきたなって」</font>
+- <font color="blue">konifar「慣れてきたなって」</font>
 - <font color="red">yome「腹をくくったというか」</font>
-- <font color="blue">konifar「「あぁ、腹をくくったかｗ なるほど」</font>
+- <font color="blue">konifar「あぁ、腹をくくったかｗ なるほど」</font>
 
 ### Material Design Animationとは
-- <font color="blue">konifar「「今日は前予告したとおりMaterial Designとか最近のGoogleのデザイン関係のフィードバックというかね、見てどう思うか忌憚のない意見を述べてもらうっていうのをやろうと思う」</font>
+- <font color="blue">konifar「今日は前予告したとおりMaterial Designとか最近のGoogleのデザイン関係のフィードバックというかね、見てどう思うか忌憚のない意見を述べてもらうっていうのをやろうと思う」</font>
 - <font color="red">yome「ズブの素人からｗ」</font>
-- <font color="blue">konifar「「ズブの素人からｗ まぁそれがいいんだよね」</font>
-- <font color="blue">konifar「「まずどういうものかって話なんだけど、（ガイドラインを見せる）これがガイドラインって言ってね、Material Designというのがどういうものか、アプリを作る時にどういうふうにすべきかっていうのをGoogleが提供してるの」</font>
+- <font color="blue">konifar「ズブの素人からｗ まぁそれがいいんだよね」</font>
+- <font color="blue">konifar「まずどういうものかって話なんだけど、（ガイドラインを見せる）これがガイドラインって言ってね、Material Designというのがどういうものか、アプリを作る時にどういうふうにすべきかっていうのをGoogleが提供してるの」</font>
 - <font color="red">yome「ほぅ」</font>
-- <font color="blue">konifar「「2年くらい前かな、もうちょっと前かな。これすごい細かくて。例えば、このMovementっていうところを見ると、この位置からこう移動する時に、まっすぐ移動するんじゃなくて、直線じゃなくて緩急をつけて…」</font>
+- <font color="blue">konifar「2年くらい前かな、もうちょっと前かな。これすごい細かくて。例えば、このMovementっていうところを見ると、この位置からこう移動する時に、まっすぐ移動するんじゃなくて、直線じゃなくて緩急をつけて…」</font>
 - <font color="red">yome「曲線？」</font>
-- <font color="blue">konifar「「そう、曲線。そうすると、人間味あふれる動きが出ていい感じだよって。これはいい動き、こっちは悪い動き」</font>
+- <font color="blue">konifar「そう、曲線。そうすると、人間味あふれる動きが出ていい感じだよって。これはいい動き、こっちは悪い動き」</font>
 - <font color="red">yome「おぉ〜」</font>
-- <font color="blue">konifar「「こういうのが、いい悪いってちゃんと書いてあるのね。例えばこれとか、Transforming material。ある部品がある部品に変わる時にどういうふうに変わるべきか。これとかわかりやすい。この画像を押した時に、この画像が広がるようにダイアログっていうこの画面になる」</font>
+- <font color="blue">konifar「こういうのが、いい悪いってちゃんと書いてあるのね。例えばこれとか、Transforming material。ある部品がある部品に変わる時にどういうふうに変わるべきか。これとかわかりやすい。この画像を押した時に、この画像が広がるようにダイアログっていうこの画面になる」</font>
 - <font color="red">yome「うんうん」</font>
-- <font color="blue">konifar「「これ最近、これを意識してるアプリだと取り込んでいるんだけど、困るのはね、Googleはこれをいいって言ってるんだけど、これをどういうふうに作るべきか、開発者がどうやって作るべきかっていうのをそこまでちゃんと提供してないのね」</font>
+- <font color="blue">konifar「これ最近、これを意識してるアプリだと取り込んでいるんだけど、困るのはね、Googleはこれをいいって言ってるんだけど、これをどういうふうに作るべきか、開発者がどうやって作るべきかっていうのをそこまでちゃんと提供してないのね」</font>
 - <font color="red">yome「へぇ〜」</font>
-- <font color="blue">konifar「「だから、みんな悩んで悩んで『どうやって作ればいいのかなぁ』『おれは工作ってみたらうまくできた』っていうのをみんな試してるわけ」</font>
+- <font color="blue">konifar「だから、みんな悩んで悩んで『どうやって作ればいいのかなぁ』『おれは工作ってみたらうまくできた』っていうのをみんな試してるわけ」</font>
 - <font color="red">yome「うん」</font>
 
 ### material-cat
-- <font color="blue">konifar「「で、俺が昔作った1つはその目的で、このmaterial-catってアプリ。前に作ったの見てたでしょう？」</font>
+- <font color="blue">konifar「で、俺が昔作った1つはその目的で、このmaterial-catってアプリ。前に作ったの見てたでしょう？」</font>
 - <font color="red">yome「うん、『世界猫の日』に」</font>
-- <font color="blue">konifar「「そう、『世界猫の日』にリリースして、渋谷で発表したやつ。これはまさにこのアニメーションを意識していて、ここをタップしたら…ほら」</font>
+- <font color="blue">konifar「そう、『世界猫の日』にリリースして、渋谷で発表したやつ。これはまさにこのアニメーションを意識していて、ここをタップしたら…ほら」</font>
 - <font color="red">yome「おぉ、一緒だ」</font>
-- <font color="blue">konifar「「そう、一緒だけど、よく見るとまっすぐ移動してる。だからちょっとね、そこまで出来てない」</font>
+- <font color="blue">konifar「そう、一緒だけど、よく見るとまっすぐ移動してる。だからちょっとね、そこまで出来てない」</font>
 - <font color="red">yome「減点だね」</font>
-- <font color="blue">konifar「「そうだね、減点だねｗ ここのボタン、再生ボタンと停止ボタンのアイコンがモーションで動くやつ。これもここで定義されてて」</font>
+- <font color="blue">konifar「そうだね、減点だねｗ ここのボタン、再生ボタンと停止ボタンのアイコンがモーションで動くやつ。これもここで定義されてて」</font>
 - <font color="red">yome「ふーん」</font>
-- <font color="blue">konifar「「こいつはうまくできてるんだよね」</font>
+- <font color="blue">konifar「こいつはうまくできてるんだよね」</font>
 - <font color="red">yome「加点だね」</font>
-- <font color="blue">konifar「「加点…加点だねｗ」</font>
-- <font color="blue">konifar「「あとここもそうだな。ここもねぇ、滑らかじゃないんだよね。でもさぁ、こういう動きとか見て、普段使ってるアプリとくらべてどっちがいいとか思ったりする？」</font>
+- <font color="blue">konifar「加点…加点だねｗ」</font>
+- <font color="blue">konifar「あとここもそうだな。ここもねぇ、滑らかじゃないんだよね。でもさぁ、こういう動きとか見て、普段使ってるアプリとくらべてどっちがいいとか思ったりする？」</font>
 - <font color="red">yome「どうとも思わないｗ」</font>
-- <font color="blue">konifar「「何も思わないよねｗ どっちでもいいでしょ？」</font>
+- <font color="blue">konifar「何も思わないよねｗ どっちでもいいでしょ？」</font>
 - <font color="red">yome「うんｗ」</font>
-- <font color="blue">konifar「「それより画像のロードとかの方が気になるよね？」</font>
+- <font color="blue">konifar「それより画像のロードとかの方が気になるよね？」</font>
 - <font color="red">yome「うん」</font>
-- <font color="blue">konifar「「遅い、速いだけの世界じゃない？これはサクサク表示される、良い。これは遅い、悪い。なんかいつも話してる感じだとそうなのかなぁと思うんだよね」</font>
+- <font color="blue">konifar「遅い、速いだけの世界じゃない？これはサクサク表示される、良い。これは遅い、悪い。なんかいつも話してる感じだとそうなのかなぁと思うんだよね」</font>
 - <font color="red">yome「うん」</font>
-- <font color="blue">konifar「「これは俺が作ったやつなんだけど、結構綺麗にできてると思うんだよ。画像とか。でもやっぱりなんか…重いよね？」</font>
+- <font color="blue">konifar「これは俺が作ったやつなんだけど、結構綺麗にできてると思うんだよ。画像とか。でもやっぱりなんか…重いよね？」</font>
 - <font color="red">yome「あぁ〜そうだねぇ」</font>
-- <font color="blue">konifar「「パッ、パッ、なんだけどね」</font>
+- <font color="blue">konifar「パッ、パッ、なんだけどね」</font>
 - <font color="red">yome「2回動くんだね」</font>
-- <font color="blue">konifar「「あぁ、それはね…たしかに」</font>
+- <font color="blue">konifar「あぁ、それはね…たしかに」</font>
 
 ### plaid
-- <font color="blue">konifar「「もう一個の方のアプリを見てみよう。これはねぇ、Plaidっていうアプリで、nickさんという人が作ってるんだけどね」</font>
+- <font color="blue">konifar「もう一個の方のアプリを見てみよう。これはねぇ、Plaidっていうアプリで、nickさんという人が作ってるんだけどね」</font>
 - <font color="red">yome「うん」</font>
-- <font color="blue">konifar「「GitHubの星が7900もある」</font>
+- <font color="blue">konifar「GitHubの星が7900もある」</font>
 - <font color="red">yome「つよい」</font>
-- <font color="blue">konifar「「そう、つよいｗ よくわかってるねｗ この星があるのはつよいやつだから」</font>
+- <font color="blue">konifar「そう、つよいｗ よくわかってるねｗ この星があるのはつよいやつだから」</font>
 - <font color="red">yome「うんｗ」</font>
-- <font color="blue">konifar「「俺のやつは1700くらいでしょ」</font>
+- <font color="blue">konifar「俺のやつは1700くらいでしょ」</font>
 - <font color="red">yome「よわい」</font>
-- <font color="blue">konifar「「よわくはないｗ まぁこれと比べたらよわいｗ」</font>
-- <font color="blue">konifar「「で、これなんだけど、これもここをタップしたらこう出てくる。どう？」</font>
+- <font color="blue">konifar「よわくはないｗ まぁこれと比べたらよわいｗ」</font>
+- <font color="blue">konifar「で、これなんだけど、これもここをタップしたらこう出てくる。どう？」</font>
 - <font color="red">yome「直線的じゃない？」</font>
-- <font color="blue">konifar「「お、そうだね。さっきの悪いパターン」</font>
+- <font color="blue">konifar「お、そうだね。さっきの悪いパターン」</font>
 - <font color="red">yome「うん、減点パターン」</font>
-- <font color="blue">konifar「「減点ではないんだよｗ これもねぇ、すげえ頑張ってるんだよ。こうやってこう、この画面をさ、こうスワイプすると元に戻るっていう動きとか」</font>
+- <font color="blue">konifar「減点ではないんだよｗ これもねぇ、すげえ頑張ってるんだよ。こうやってこう、この画面をさ、こうスワイプすると元に戻るっていう動きとか」</font>
 - <font color="red">yome「あぁ〜」</font>
-- <font color="blue">konifar「「これも見ただけで吐き気がするくらい頑張ってるってのがわかるんだよ」</font>
+- <font color="blue">konifar「これも見ただけで吐き気がするくらい頑張ってるってのがわかるんだよ」</font>
 - <font color="red">yome「へぇ〜」</font>
-- <font color="blue">konifar「「けどさぁ、どうでもいいよね？見てる人からすると」</font>
+- <font color="blue">konifar「けどさぁ、どうでもいいよね？見てる人からすると」</font>
 - <font color="red">yome「ｗｗ」</font>
-- <font color="blue">konifar「「その、嫁さんからするとさぁ、こことか押すとね、ほら、さっきの動き。これはどう？」</font>
+- <font color="blue">konifar「その、嫁さんからするとさぁ、こことか押すとね、ほら、さっきの動き。これはどう？」</font>
