--- a/_posts/2016-12-28-2.md
+++ b/_posts/2016-12-28-2.md
@@ -8,7 +8,7 @@ date: 2016-12-28 00:00:00 +0900
 description: konifarと嫁氏で、yome.fmの反響、普段の会話、響け！ユーフォニアム、まどマギ、Material Designなどについて話しました。
 duration: "10:49"
 layout: article
-title: 2. 日々の仕事とアニメの会話
+title: 2. 日々の仕事とアニメの会話（10:49）
 ---
 
 ## 関連リンク
