--- a/_posts/2016-12-31-3.md
+++ b/_posts/2016-12-31-3.md
@@ -8,7 +8,7 @@ date: 2016-12-31 00:00:00 +0900
 description: konifarと嫁氏で、Material Design Animation、plaid・material-cat・who-voiceの感想、Animation実装と開発者のエゴなどについて話しました。
 duration: "12:36"
 layout: article
-title: 3. Material Design Animationと嫁氏
+title: 3. Material Design Animationと嫁氏（12:36）
 ---
 
 ## 関連リンク
