--- a/_posts/2017-01-23-5.md
+++ b/_posts/2017-01-23-5.md
@@ -16,3 +16,67 @@ title: 5. 夫の転職（8:11）
 
 
 ## 書き起こし
+
+### イントロダクション
+- <font color="blue">konifar「こんにちは」</font>
+- <font color="red">yome「こんにちは」</font>
+- <font color="blue">konifar「やっていきますか」</font>
+- <font color="red">yome「はいｗ 5回？」</font>
+- <font color="blue">konifar「5回。本当は金曜に録る予定だったんだけど、ちょっと機嫌悪そうだったから」</font>
+- <font color="red">yome「帰ってくるの遅かったからでしょ！」</font>
+- <font color="blue">konifar「そう、だから金曜はやめて、土曜にやろうと思ったんだけど土曜は遊んじゃって、日曜は資料作りとかしてたから」</font>
+- <font color="red">yome「忙しそうだったね」</font>
+- <font color="blue">konifar「いつの間にか日曜になっちゃったけど、やっていきますか」</font>
+- <font color="red">yome「はい」</font>
+
+### 夫の転職
+- <font color="blue">konifar「今日は夫の転職について話そうと思って。まぁ俺なんだけど」</font>
+- <font color="red">yome「うんｗ」</font>
+- <font color="blue">konifar「転職2回してるんんだよね、俺」</font>
+- <font color="red">yome「ね」</font>
+- <font color="blue">konifar「どう？今。雑な質問だけど」</font>
+- <font color="red">yome「いいんじゃないですか？ｗ 仕事量も」</font>
+- <font color="blue">konifar「仕事量も」</font>
+- <font color="red">yome「うん」</font>
+- <font color="blue">konifar「仕事量で言うと昔はひどかったかな」</font>
+- <font color="red">yome「うん」</font>
+- <font color="blue">konifar「昔っていつの話？最初の話？」</font>
+- <font color="red">yome「いや、最初と2回目も」</font>
+- <font color="blue">konifar「２回目もひどい時はひどかったか」</font>
+- <font color="red">yome「そうだね」</font>
+- <font color="blue">konifar「でも2回目は徹夜とかしてないよ」</font>
+- <font color="red">yome「あーそうだね」</font>
+- <font color="blue">konifar「1回目はねぇ、すごい泊まってたからね。3〜4日とか泊まったりしてた」</font>
+- <font color="red">yome「あ、そうなの？」</font>
+- <font color="blue">konifar「あ、そうか。結婚してない時だったかな」</font>
+- <font color="red">yome「うん」</font>
+- <font color="blue">konifar「結婚してからはたまにだったかな、うん」</font>
+
+### 1回目の転職
+- <font color="blue">konifar「1回目の転職の時はねぇ、特にどう思ったか気になってるんだよね」</font>
+- <font color="red">yome「あ、そうなの？」</font>
+- <font color="blue">konifar「そう、給料もだいぶ減ったからね、生々しい話するとｗ」</font>
+- <font color="red">yome「それ言っていいの？ｗ」</font>
+- <font color="blue">konifar「うん、言って大丈夫。むしろ給料の話ってあんまり外に語られることないから、言った方がいいと思ってるんだよね。まぁ値段は置いとくけど」</font>
+- <font color="red">yome「うん」</font>
+- <font color="blue">konifar「だってあの時2/3以下になったはずだから。ここで額いくら減ったとか言うとわかっちゃうかもしれないから言わないけど」</font>
+- <font color="red">yome「ｗ」</font>
+- <font color="blue">konifar「何百万単位で減ったんだよね。で、減るってことも言ってたと思うんだよ。どう思った？心配だなぁとか特になかった？」</font>
+- <font color="red">yome「特になく」</font>
+- <font color="blue">konifar「まぁ元が高かったからか」</font>
+- <font color="red">yome「そう、過分かなと思って」</font>
+- <font color="blue">konifar「そうだね、もらってたけどまぁしんどそうだったしいいかもなって？」</font>
+- <font color="red">yome「うん、気持ちがハッピーになるなら」</font>
+- <font color="blue">konifar「うん、いい嫁さんだねぇｗ」</font>
+- <font color="red">yome「ｗｗｗ」</font>
+- <font color="blue">konifar「嫁ブロックっていう言葉あるの知ってる？」</font>
+- <font color="red">yome「あぁー、転職を金銭面とかで心配して…阻止する」</font>
+- <font color="blue">konifar「そうそう、阻止。ブロック。それとは真逆というか、うん」</font>
+
+### 2回目の転職
+- <font color="blue">konifar「2回目はどう思った？要は今の職場に変わるってなった時。あの時は逐一あの時はこういう考えで転職するよっていうのを話してたか」</font>
+- <font color="red">yome「うん、状況を説明してた」</font>
+- <font color="blue">konifar「今こういう面接をしてきたとか」</font>
+- <font color="red">yome「うんうん」</font>
+- <font color="blue">konifar「入るけどいつにしようかなとかっていうのをテレビとか見ながら話してたから、そんなに抵抗というか、突然って感じでもなかったか」</font>
+- <font color="red">yome「うん」</font>
