--- a/_posts/2017-04-11-8.md
+++ b/_posts/2017-04-11-8.md
@@ -8,7 +8,7 @@ date: 2017-04-11 00:00:00 +0900
 description: konifarが嫁氏に、ReactNativeについて説明しました。
 duration: "15:16"
 layout: article
-title: 8. ReactNativeと嫁氏
+title: 8. ReactNativeと嫁氏（15:16）
 ---
 
 ## 関連リンク
