Modified the title

--- a/_posts/2017-07-31-10.md
+++ b/_posts/2017-07-31-10.md
@@ -8,7 +8,7 @@ date: 2017-07-31 00:00:00 +0900
 description: konifarと嫁氏で、『君の名は。』の特典映像、自尊心と成果、映画館貸切などについて話しました。
 duration: "15:52"
 layout: article
-title: 10. 『君の名は。』特典映像と、自尊心に釣り合う成果
+title: 10. 『君の名は。』特典映像と、自尊心に釣り合う成果（15:52）
 ---
 
 ## 関連リンク
@@ -16,4 +16,5 @@ title: 10. 『君の名は。』特典映像と、自尊心に釣り合う成果
 - [ミニシアター「アットシアター」新宿](https://spacemarket.com/spaces/attheatre/rooms/RJpRS0dwuyfVGN_x)
 
 ## 書き起こし
-あとであげます。
+
+そのうちあげます。
