--- a/_posts/2025-01-10-19.md
+++ b/_posts/2025-01-10-19.md
@@ -15,3 +15,4 @@ title: 19. No No Girlsとフィードバックとキャリア（34:24）
 
 - [No No Girls](https://nonogirls.audition-bmsg.tokyo/)
 - [No No Girls Episode](https://www.youtube.com/playlist?list=PL52OyqYAfVEfIkHgGErZdFdMmkTz4Z4fp)
+- [直接話す、すぐ話す](https://konifar-zatsu.hatenadiary.jp/entry/2021/12/18/041353)
