--- a/_posts/2025-03-08-23.md
+++ b/_posts/2025-03-08-23.md
@@ -5,7 +5,7 @@ actor_ids:
 audio_file_path: /audio/20250308_yomefm.mp3
 audio_file_size: 56.9MB
 date: 2025-03-08 00:00:00 +0900
-description: 嫁氏と2人で、EMConfの感想などについて話しました。
+description: 嫁氏と2人で、EMConf運営の素晴らしさ、"増幅と触媒"というテーマ、カンファレンススタッフ参加の面白さ、konifarの登壇の裏側などについて話しました。
 duration: "29:37"
 layout: article
 title: 23. EMConfの感想（29:37）
@@ -16,3 +16,4 @@ title: 23. EMConfの感想（29:37）
 - [EMConf 2025](https://2025.emconf.jp/)
 - [EMConf 2025 プロポーザル](https://fortee.jp/emconf-2025/proposal/d74c0603-765c-401c-b22a-75645aace27a)
 - [サバイバルモード下でのエンジニアリングマネジメント](https://speakerdeck.com/konifar/sahaiharumotoxia-tenoensiniarinkumanesimento)
+- [EMConf 2025参加レポート](https://zenn.dev/k_omo/articles/9699405e943610)
